# goit-pythonweb-hw-03

./: pyproject.toml  read.html  server.py
