[project]
name = "goit-pythonweb-hw-03"
version = "0.1.0"
description = "web app server"
authors = [
    {name = "Sergey Kravchenko",email = "skravchenko223@gmail.com"}
]
license = {text = "no"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

